<resources>
    <string name="app_name">InventoryTracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_cancel">Cancel</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">InventoryTracker</string>
    <string name="nav_header_subtitle">michael.mihalik@snhu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="invalid_productName">Name must be >3 characters</string>
    <string name="invalid_productType">Type must be >3 characters</string>
    <string name="invalid_productCount">Must be an integer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_name">Name (optional)</string>
    <string name="prompt_confirm_password">Confirm Password</string>
</resources>
