<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_gear"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/question_mark"
            android:title="@string/menu_help" />
    </group>

    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/menu_sign_out" />
</menu>
